--- a/.github/workflows/push2gcr.yml
+++ b/.github/workflows/push2gcr.yml
@@ -11,7 +11,7 @@ jobs:
       packages: 'write'
     steps:      
       - name: Checkout Code
-      - uses: actions/checkout@v3
+        uses: actions/checkout@v3
       
       - name: Login to GCR
         env:
