--- a/.github/workflows/push2gcr.yml
+++ b/.github/workflows/push2gcr.yml
@@ -26,7 +26,7 @@ jobs:
         env:
           IMAGE_NAME: gpt_api #create env called IMAGE_NAME consisted of actual name of Docker Image after we build
           PROJECT_ID: gpt-api-378106
-        run: docker build -t $IMAGE_NAME:latest . #build the docker image
+        run: docker build -t $IMAGE_NAME:latest ./ #build the docker image
         
       - name: Configure Docker Client
         run:  |-
