--- a/DOCKERFILE
+++ b/DOCKERFILE
@@ -1,11 +1,6 @@
 FROM joyzoursky/python-chromedriver
 
-WORKDIR /api
-
-ADD . /api
-
-RUN pip install -r requirements.txt
-
-# ENTRYPOINT [ "python" ]
-
-CMD exec gunicorn --bind :$PORT --workers 1 --worker-class uvicorn.workers.UvicornWorker  --threads 8 api.main:app
+COPY requirements.txt /
+RUN pip3 install -r /requirements.txt
+COPY app.py .
+CMD ["gunicorn"  , "-b", "0.0.0.0:8888", "main:app"]
