--- a/DOCKERFILE
+++ b/DOCKERFILE
@@ -2,5 +2,5 @@ FROM joyzoursky/python-chromedriver
 
 COPY requirements.txt /
 RUN pip3 install -r /requirements.txt
-COPY app.py .
+COPY main.py .
 CMD ["gunicorn"  , "-b", "0.0.0.0:8888", "main:app"]
