--- a/DOCKERFILE
+++ b/DOCKERFILE
@@ -3,4 +3,4 @@ FROM joyzoursky/python-chromedriver
 COPY requirements.txt /
 RUN pip3 install -r /requirements.txt
 COPY main.py .
-CMD ["gunicorn" , "-t", "0", -b", "0.0.0.0:8888", "main:app"]
+CMD ["gunicorn" ,"-b", "0.0.0.0:8888", "main:app"]
