--- a/DOCKERFILE
+++ b/DOCKERFILE
@@ -1,4 +1,4 @@
-FROM zenika/alpine-chrome:with-chromedriver
+FROM selenium/standalone-chrome:4.8.0-20230210
 
 COPY requirements.txt /
 RUN pip3 install -r /requirements.txt
