--- a/DOCKERFILE
+++ b/DOCKERFILE
@@ -1,5 +1,8 @@
-FROM selenium/standalone-chrome:4.8.0-20230210
+FROM selenium/standalone-chrome:latest
 
+RUN sudo apt-get -y update
+RUN sudo apt-get install -y python3-pip
+RUN sudo apt install chromium-browser xvfb
 COPY requirements.txt /
 RUN pip3 install -r /requirements.txt
 COPY main.py .
