--- a/DOCKERFILE
+++ b/DOCKERFILE
@@ -1,6 +1,7 @@
 FROM python:3.8-alpine
 
 RUN apk update && apk upgrade && apk add --no-cache chromium chromium-chromedriver xvfb
+ENV PATH="/usr/bin/chromedriver:${PATH}"
 
 COPY requirements.txt /
 RUN pip3 install -r /requirements.txt
