--- a/DOCKERFILE
+++ b/DOCKERFILE
@@ -1,4 +1,4 @@
-FROM ultrafunk/undetected-chromedriver:latest
+FROM ultrafunk/undetected-chromedriver:3.20-chrome-lateinstall
 
 COPY requirements.txt /
 RUN pip3 install -r /requirements.txt
