--- a/DOCKERFILE
+++ b/DOCKERFILE
@@ -1,4 +1,6 @@
-FROM ultrafunk/undetected-chromedriver:3.20-chrome-lateinstall
+FROM ultrafunk/undetected-chromedriver:latest
+
+RUN apt-get --only-upgrade install google-chrome-stable
 
 COPY requirements.txt /
 RUN pip3 install -r /requirements.txt
