--- a/DOCKERFILE
+++ b/DOCKERFILE
@@ -5,4 +5,5 @@ RUN apt-get --only-upgrade install google-chrome-stable
 COPY requirements.txt /
 RUN pip3 install -r /requirements.txt
 COPY main.py .
+COPY ChatGPTAPI.py .
 CMD ["gunicorn" ,"-b", "0.0.0.0:8888", "main:app"]
