--- a/DOCKERFILE
+++ b/DOCKERFILE
@@ -5,7 +5,6 @@ RUN apt-get --only-upgrade install google-chrome-stable
 COPY requirements.txt /
 RUN pip3 install -r /requirements.txt
 COPY main.py .
-COPY pyGPT/Auth0.py ./pyGPT
-COPY pyGPT/__init__.py ./pyGPT
-COPY pyGPT/pyChatGPT.py ./pyGPT
+COPY pyGPT ./pyGPT
+
 CMD ["gunicorn" ,"-b", "0.0.0.0:8888", "main:app"]
